# NebulaDisplay

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  nebula-mcp-ci.yml
crates/nebula-host/: Cargo.toml
crates/nebula-host/src/: adaptive.rs  audio.rs  config.rs  discovery.rs  fallback.html  lib.rs  main.rs  pairing.rs  pipeline.rs  server.rs  service_win.rs  state.rs  tls.rs
crates/nebula-host/src/capture/: dxgi.rs  idd.rs  mod.rs  test_pattern.rs
crates/nebula-host/src/encode/: dirty.rs  mod.rs
crates/nebula-host/src/input/: keymap.rs  mod.rs  windows_inject.rs
crates/nebula-host/tests/: e2e.rs
crates/nebula-proto/: Cargo.toml
crates/nebula-proto/src/: control.rs  lib.rs  packet.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  BROWSER-COMPAT.md  BUILD.md  BUILDING.md  CONNECTIVITY.md  EXPLAINER.md  PROTOCOL.md  RELEASE-CHECKLIST.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
host/service/: Cargo.toml
host/service/src/: adapt.rs  audio.rs  clipboard.rs  config.rs  discovery.rs  filedrop.rs  keystore.rs  lib.rs  main.rs  pairing.rs  panel.rs  pin.rs  quic.rs  server.rs  session.rs  state.rs  tls.rs  transfers.rs  transport.rs  trust.rs  util.rs
host/service/src/audio/: mod.rs  test_tone.rs  tone.rs  windows_wasapi.rs
host/service/src/capture/: mod.rs  test_pattern.rs  windows_dxgi.rs  windows_idd.rs
host/service/src/clipboard/: windows_clipboard.rs
host/service/src/encode/: dirty.rs  h264.rs  jpeg.rs  mf_h264.rs  mf_video.rs  mod.rs
host/service/src/input/: mod.rs  touch.rs  touch_frame.rs  windows_gamepad.rs  windows_inject.rs  windows_pen.rs
host/service/tests/: e2e.rs
host/tray-ui/: Cargo.toml  build.bat  tray.cpp
host/tray-ui/src/: main.rs
host/windows-driver/: NebulaDisplay.inf  NebulaDisplay.vcxproj  NebulaDisplayDriver.vcxproj  README.md  nebuladisplay.inf
host/windows-driver/companion/: devnode.cpp
host/windows-driver/include/: ndsp_frame_ring.h
host/windows-driver/src/: Driver.cpp  Driver.h
host/windows-driver/tests/: syntax-check.sh
host/windows-driver/tests/stub/: avrt.h  d3d11.h  dxgi1_4.h  iddcx.h  wdf.h  windows.h  wrl.h
installer/: install-driver.ps1  make-portable.ps1  nebuladisplay.iss
installer/windows/: install-driver.ps1  nebuladisplay.iss  uninstall-driver.ps1
nebula-mcp/: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  TOOLS.md
nebula-mcp/config/: default.toml  nebula-driver-dev.toml
nebula-mcp/crates/core/: Cargo.toml
nebula-mcp/crates/core/src/: config.rs  context.rs  error.rs  hotreload.rs  lib.rs  metrics.rs  security.rs  telemetry.rs  tool.rs
nebula-mcp/crates/protocol/: Cargo.toml
nebula-mcp/crates/protocol/src/: jsonrpc.rs  lib.rs  mcp.rs  transport.rs
nebula-mcp/crates/server/: Cargo.toml
nebula-mcp/crates/server/src/: lib.rs  main.rs  metrics_endpoint.rs  prompts.rs  resources.rs  server.rs
nebula-mcp/crates/server/tests/: integration.rs
nebula-mcp/crates/tools/: Cargo.toml
nebula-mcp/crates/tools/src/: benchmark.rs  browser.rs  diagnostics.rs  display.rs  docker.rs  driver.rs  filesystem.rs  git.rs  github.rs  lib.rs  network.rs  powershell.rs  process.rs  scheduler.rs  security.rs  terminal.rs  windows.rs
nebula-mcp/crates/tools/src/common/: args.rs  exec.rs  mod.rs  output.rs  platform.rs  scheduler.rs  schema.rs  session.rs
scripts/: dev.sh  smoke.sh
shared/client/: Cargo.toml
shared/client/src/: lib.rs
shared/keystore/: Cargo.toml
shared/keystore/src/: lib.rs
shared/protocol/: Cargo.toml
shared/protocol/examples/: spake2_interop.rs
shared/protocol/src/: crypto.rs  discovery.rs  envelope.rs  files.rs  lib.rs  media.rs  messages.rs  pake.rs  spake2.rs
tests/: browser-smoke.mjs
viewer/android/: README.md  settings.gradle.kts
viewer/android/app/: build.gradle.kts
viewer/android/app/src/main/: AndroidManifest.xml
viewer/android/app/src/main/java/dev/nebuladisplay/viewer/: CredStore.kt  MainActivity.kt  NdspCrypto.kt  NdspSession.kt  Spake2.kt  StreamRenderer.kt
viewer/android/app/src/main/java/io/nebuladisplay/viewer/: Discovery.kt  MainActivity.kt  NdspClient.kt  StreamView.kt
viewer/android/app/src/main/res/layout/: activity_main.xml
viewer/android/app/src/main/res/values/: strings.xml
viewer/android/interop/: README.md  build.gradle.kts  settings.gradle.kts
viewer/android/interop/src/main/kotlin/interop/: Main.kt
viewer/desktop/: Cargo.toml  README.md
viewer/desktop/src/: audio.rs  decode.rs  main.rs  net.rs  receive.rs  store.rs
viewer/desktop/src-tauri/: Cargo.toml  tauri.conf.json
viewer/desktop/src-tauri/src/: main.rs
viewer/ios/: README.md
viewer/ios/NebulaViewer/: NdspClient.swift  NdspSession.swift  NebulaViewerApp.swift  StreamDecoder.swift  StreamViewController.swift
viewer/web/: index.html  package-lock.json  package.json  panel.html  tsconfig.json  vite.config.ts
viewer/web/src/: audio.ts  audioplay.ts  caps.ts  client.ts  clock.ts  crypto.ts  cryptobox.ts  decoder.ts  filedrop.ts  filerecv.ts  fmp4.ts  input.ts  main.ts  pake.ts  panel.ts  protocol.ts  session.ts  spake2.ts  style.css  viewer.ts
viewer/web/tests/: bench.mjs  browser-e2e.mjs  compat-e2e.mjs  mapping.mjs  pake-vector.mjs  pake-vectors.mjs  reconnect-e2e.mjs  web-compat.mjs
viewer/web/view/: index.html
