[workspace]
resolver = "2"
members = [
    "crates/nebula-proto",
    "crates/nebula-host",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Meganugger/NebulaDisplay"
authors = ["NebulaDisplay contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
