[workspace]
resolver = "2"
members = [
    "shared/protocol",
    "shared/client",
    "host/service",
    "host/tray-ui",
    "viewer/desktop",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Meganugger/NebulaDisplay"
rust-version = "1.80"

[workspace.dependencies]
ndsp-protocol = { path = "shared/protocol" }
ndsp-client = { path = "shared/client", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
