[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/core",
    "crates/tools",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["NebulaDisplay contributors"]
repository = "https://github.com/Meganugger/NebulaDisplay"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Tracing / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }
tracing-appender = "0.2"

# Utilities
bytes = "1.7"
globset = "0.4"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
notify = "6.1"
notify-debouncer-mini = "0.4"
which = "6.0"
shell-words = "1.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "macros"] }
dirs = "5.0"
parking_lot = "0.12"
dashmap = "6.1"
num_cpus = "1.16"

# HTTP / network
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2.5"

# Dev
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
