[package]
name = "nebula-host"
description = "NebulaDisplay host service: capture, encode, secure pairing, streaming server, LAN discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nebula-proto = { path = "../nebula-proto" }

anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
dirs = "5"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal", "fs"] }
axum = { version = "0.7", features = ["ws"] }
axum-server = "0.7"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
futures-util = "0.3"

rcgen = { version = "0.13", optional = true }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

jpeg-encoder = { version = "0.6", features = ["simd"] }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Variant",
] }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
# TLS is on by default. `--no-default-features` exists for cross-checking
# the Windows code paths from hosts that cannot build the rustls C deps.
default = ["tls"]
tls = ["axum-server/tls-rustls", "dep:rcgen"]
