[package]
name = "nebula-proto"
description = "NebulaDisplay Stream Protocol (NDSP) — versioned message types, binary packet framing, and capability negotiation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
