[package]
name = "nebulad"
description = "NebulaDisplay host service: capture, encode, encrypt, stream, input bridge, discovery, control panel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["h264", "audio"]
# OpenH264 software encoder (built from source; BSD-2-Clause). Disable to fall
# back to JPEG-only streaming: `cargo build --no-default-features`.
h264 = ["dep:openh264", "dep:openh264-sys2"]
# Opus audio streaming (libopus built from source via cmake; BSD-3-Clause).
audio = ["dep:opus"]

[dependencies]
ndsp-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
jpeg-encoder = { version = "0.6", features = ["simd"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
openh264 = { version = "0.9", optional = true }
# Raw bindings for runtime SetOption (bitrate/fps without encoder re-init).
openh264-sys2 = { version = "0.9", optional = true }
opus = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

[dev-dependencies]
ndsp-client = { workspace = true }
# e2e tests decode the streamed audio to prove packets are real Opus.
opus = "0.3"

