[package]
name = "nebulad"
description = "NebulaDisplay host service: capture, encode, encrypt, stream, input bridge, discovery, control panel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["h264"]
# OpenH264 software encoder (built from source; BSD-2-Clause). Disable to fall
# back to JPEG-only streaming: `cargo build --no-default-features`.
h264 = ["dep:openh264", "dep:openh264-sys2"]

[dependencies]
ndsp-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
# Optional HTTPS/WSS viewer endpoint (self-signed + fingerprint pinning).
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
jpeg-encoder = { version = "0.6", features = ["simd"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
openh264 = { version = "0.9", optional = true }
# Raw bindings for runtime SetOption (bitrate/fps without encoder re-init).
openh264-sys2 = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_DataExchange",
    "Win32_Security_Cryptography",
] }

[dev-dependencies]
ndsp-client = { workspace = true }
