[package]
name = "nebulad"
description = "NebulaDisplay host service: capture, encode, encrypt, stream, input bridge, discovery, control panel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["h264"]
# OpenH264 software encoder (built from source; BSD-2-Clause). Disable to fall
# back to JPEG-only streaming: `cargo build --no-default-features`.
h264 = ["dep:openh264", "dep:openh264-sys2"]

[dependencies]
ndsp-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
jpeg-encoder = { version = "0.6", features = ["simd"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Audio: Opus encoding of WASAPI-loopback / test-tone capture (channel 3).
opus = "0.3"
# Clipboard sync (permission-gated, text-only).
arboard = { version = "3", default-features = false }
# Optional HTTPS: self-signed cert generation + TLS serving.
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
openh264 = { version = "0.9", optional = true }
# Raw bindings for runtime SetOption (bitrate/fps without encoder re-init).
openh264-sys2 = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Security_Cryptography",
    "UI_Input_Preview_Injection",
    "Gaming_Input",
] }

[dev-dependencies]
ndsp-client = { workspace = true }

# OS keychain for the at-rest keystore wrapping key (ROADMAP P1.6).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
