[package]
name = "nebula-tray"
description = "NebulaDisplay tray companion: status icon, quick actions, panel launcher (Windows)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ndsp-protocol = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[[bin]]
name = "nebula-tray"
path = "src/main.rs"
