[package]
name = "ndsp-client"
description = "NebulaDisplay client SDK: pairing, token reconnect, encrypted session I/O (used by the desktop viewer and integration tests)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["tls"]
# TLS (wss) with certificate-fingerprint pinning for `--https` hosts.
# Feature-gated because rustls/ring contain native code.
tls = ["dep:rustls", "tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
ndsp-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# TLS with certificate-fingerprint pinning for HTTPS hosts (`--https`).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }

uuid = { version = "1", features = ["v4"] }
