[package]
name = "nebula-viewer"
description = "NebulaDisplay native desktop viewer (Windows/Linux/macOS): H.264/JPEG decode, input forwarding, portable single binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["h264"]
h264 = ["dep:openh264"]

[dependencies]
ndsp-protocol = { workspace = true }
ndsp-client = { workspace = true }
ndsp-keystore = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
winit = "0.30"
softbuffer = "0.4"
zune-jpeg = "0.4"
openh264 = { version = "0.9", optional = true }
