[package]
name = "nebula-mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core runtime for the NebulaDisplay MCP server: configuration, permission policy, telemetry, and the tool abstraction."

[dependencies]
nebula-mcp-protocol = { path = "../protocol" }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
num_cpus = { workspace = true }

# Optional OpenTelemetry export stack (enabled by the `otel` feature).
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
# Export traces via OTLP/gRPC when `logging.otel_endpoint` is set.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
