[package]
name = "nebula-mcp-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) JSON-RPC 2.0 types and stdio transport for the NebulaDisplay MCP server."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true }
